# CogniCube

./: .gitignore  README.md
backend/: README.md  app.py  pyproject.toml
backend/src/cognicube_backend/: __init__.py  config.py
backend/src/cognicube_backend/apis/: router_manage.py
backend/src/cognicube_backend/apis/v1/: auth.py  conversation.py  signup.py
backend/src/cognicube_backend/databases/: __init__.py  conversation_database.py  database.py  user_database.py
backend/src/cognicube_backend/models/: conversation.py  user.py
backend/src/cognicube_backend/schemas/: conversation.py  user.py
backend/src/cognicube_backend/services/: ai_chat.py  email_service.py  email_services.py  gsheet_service.py
backend/src/cognicube_backend/templates/auth/email/: confirm.html  confirm.txt
backend/src/cognicube_backend/utils/: jwt.py  jwt_generator.py
backend/tests/databases/: test_user.db
docs/: README.md
docs/apis/: apis.md
docs/backend/: README.md  数据结构设计.md
docs/frontend/: README.md
frontend/: README.md  package-lock.json  pubspec.yaml
frontend/android/app/: build.gradle  build.gradle.kts
frontend/android/app/src/main/: AndroidManifest.xml
frontend/android/app/src/main/kotlin/com/example/cognicube/: MainActivity.kt
frontend/ios/Runner/: Info.plist
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: main.dart
frontend/lib/models/: message_model.dart
frontend/lib/services/: chat.dart
frontend/lib/utils/: constants.dart
frontend/lib/view_models/: chat_view_model.dart
frontend/lib/views/components/: message_bubble.dart
frontend/lib/views/screens/chat/: chat_screen.dart
frontend/linux/: CMakeLists.txt
frontend/linux/runner/: my_application.cc
frontend/macos/Runner.xcodeproj/: project.pbxproj
frontend/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
frontend/macos/Runner/Configs/: AppInfo.xcconfig
frontend/test/: widget_test.dart
frontend/web/: index.html  manifest.json
frontend/windows/: CMakeLists.txt
frontend/windows/runner/: Runner.rc  main.cpp
